--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -3,6 +3,10 @@
     "message": "Product Hunt",
     "description": "The name of the application"
   },
+  "title": {
+    "message": "Product Hunt",
+    "description": "Default title"
+  },
   "appDescription": {
     "message": "Product Hunt Extension: The best new products, every day, in your new tab",
     "description": "The description of the application"
